fixed all layout issues and minor redesign on Auth pages and minor cleanup

--- a/src/app/auth/includes/leftpanel/leftpanel.component.scss
+++ b/src/app/auth/includes/leftpanel/leftpanel.component.scss
@@ -29,7 +29,6 @@
         width: 100%;
         text-align: left;
         padding: 10px;
-        margin-top: 20px;
         .frist {
             font-size: 1.3rem;
             line-height: 30px;
