--- a/src/app/pages/user/profile/view/view.component.scss
+++ b/src/app/pages/user/profile/view/view.component.scss
@@ -193,3 +193,26 @@
 .curs_pointer {
   cursor: pointer;
 }
+
+.abbrev {
+  @include size(7.75rem, 7.75rem);
+  border: 2px solid rgba(158, 157, 157, 0.651) !important;
+  border-radius: 50%;
+  text-align: center;
+  color: white;
+  line-height: 100px;
+  .name {
+    font-size: 4.50rem;
+    text-transform: uppercase;
+  }
+}
+
+.user__img {
+  @include size(2.75rem, 2.75rem);
+  border-radius: 50%;
+  position: absolute;
+  left: .5rem;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
